# SultanBot

./: .gitignore  .gitmodules  README.md
disassembly/: .gitignore  keys.txt  lua-luadec.bat  lua-pack.bat  lua-unluac.bat  lua-unpack.bat  req.txt
disassembly/apk/: .gitignore  apk-all-in-one.bat  apk-build.bat  apk-dump-logs.bat  apk-sign.bat  apk-unpack.bat  build-sign-install.bat  download-latest.ps1  install-apk.bat  readme.txt  signing-key.jks
disassembly/apk/keys/: sign.txt
disassembly/apk/logs/: log.txt
disassembly/apk/notes/: interesting.txt  readme.txt
disassembly/burp/: sultan-intercept.burp
disassembly/tools/: .gitignore  gateway.txt  luadec.js  readme.txt  unluac.js
disassembly/tools/custom/: package.json
disassembly/tools/custom/src/: luadec.js  pack.js  unluac.js  unpack.js
experimental/Knives-AI/: CMakeLists.txt
poc/Knives-AI/Knives-AI/: CMakeLists.txt  Knives-AI.cpp  Knives-AI.h
src/: CMakeLists.txt  CMakeSettings.json  Folder.DotSettings  config.json  main.cpp
src/CoreCapabilities/: CMakeLists.txt
src/CoreCapabilities/CoreCapabilities/: CMakeLists.txt  CoreCapabilities.cpp  CoreCapabilities.h
src/core/: CMakeLists.txt  core.cc
src/core/game/: GameProcessor.cc  GameProcessor.h  GameSession.cc  GameSession.h  GameSessionFactory.cc  GameSessionFactory.h  game-processor.cc  game-processor.h  game-session-factory.cc  game-session-factory.h  game-session.cc  game-session.h
src/core/include/: core-expection.h  core.h
src/core/misc/: SessionConfiguration.cc  SessionConfigurationParser.cc  SessionConfigurationParser.h  logger.h  session-configuration-parser.cc  session-configuration-parser.h  session-configuration.cc  session-configuration.h
src/core/network/: RequestService.cc  RequestService.h  constants.h  request-service.cc  request-service.h
src/core/network/auth/: AuthConfiguration.cc  AuthConfiguration.h  AuthService.cc  AuthService.h  auth-service.cc  auth-service.h
src/core/network/auth/models/: auth-configuration.cc  auth-configuration.h  auth-session.cc  auth-session.h
src/core/network/exceptions/: invalid-response-exception.h  parse-auth-token-exception.h  secure-facilities-expection.h
src/core/network/secure/: base64-encoder.cc  base64-encoder.h  client-data-encoder.cc  client-data-encoder.h  ecdh-key-helper.cc  ecdh-key-helper.h  server-data-encoder.h  smart-pointers.h
src/core/tools/: object-to-string.h
src/resources/: config.json
src/runnable/: CMakeLists.txt
src/test/: CMakeLists.txt  UnitTestModule.cc
src/test/misc/: SessionConfigurationParserTests.cc  session-configuration-parser-tests.cc
src/test/network/auth/: auth-service-tests.cc
src/test/network/secure/: base64-encoder-tests.cc  clinet-data-encoder-tests.cc  ecdh-key-helper-tests.cc
