# CMakeList.txt: проект CMake для Knives-AI; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

# Добавьте источник в исполняемый файл этого проекта.
add_executable (Knives-AI "Knives-AI.cpp" "Knives-AI.h")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
